--- a/static/style.css
+++ b/static/style.css
@@ -15,14 +15,18 @@ body {
     margin: 2em;
 }
 
-button {
-    cursor: pointer;
-    
-    border: none;
-    border-radius: 20px;
-    padding: 1em;
 
-    box-shadow: 0px 5px 5px black;
+.my-button {
+    border: none;
+    background: none;
+    color: rgb(255, 0, 0);
+    padding: 2px 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 #decision-results {
