--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,8 @@
             <button type="button" id="add-option">Add Option</button>
         </div>
 
+        <div id="history-list"></div>
+
     </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     
